errors_on_compile.txt
   Compiling text-generation v0.1.0 (C:\Users\laure\OneDrive\Documents\CS181\text-generation)
warning: unused import: `WindowBuilder`
 --> src/main.rs:5:22
  |
5 |     window::{Window, WindowBuilder},
  |                      ^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0308]: arguments to this function are incorrect
    --> src/main.rs:108:21
     |
108  |     let mut atlas = TextAtlas::new(&device, &queue, swapchain_format);
     |                     ^^^^^^^^^^^^^^ -------  ------  ---------------- expected `wgpu_types::TextureFormat`, found `TextureFormat`
     |                                    |        |
     |                                    |        expected `wgpu::Queue`, found a different `wgpu::Queue`
     |                                    expected `wgpu::Device`, found a different `wgpu::Device`
     |
     = note: `wgpu::Device` and `wgpu::Device` have similar names, but are actually distinct types
note: `wgpu::Device` is defined in crate `wgpu`
    --> C:\Users\laure\.cargo\registry\src\index.crates.io-6f17d22bba15001f\wgpu-0.17.0\src\lib.rs:160:1
     |
160  | pub struct Device {
     | ^^^^^^^^^^^^^^^^^
note: `wgpu::Device` is defined in crate `wgpu`
    --> C:\Users\laure\.cargo\registry\src\index.crates.io-6f17d22bba15001f\wgpu-0.16.3\src\lib.rs:117:1
     |
117  | pub struct Device {
     | ^^^^^^^^^^^^^^^^^
     = note: perhaps two different versions of crate `wgpu` are being used?
     = note: `wgpu::Queue` and `wgpu::Queue` have similar names, but are actually distinct types
note: `wgpu::Queue` is defined in crate `wgpu`
    --> C:\Users\laure\.cargo\registry\src\index.crates.io-6f17d22bba15001f\wgpu-0.17.0\src\lib.rs:884:1
     |
884  | pub struct Queue {
     | ^^^^^^^^^^^^^^^^
note: `wgpu::Queue` is defined in crate `wgpu`
    --> C:\Users\laure\.cargo\registry\src\index.crates.io-6f17d22bba15001f\wgpu-0.16.3\src\lib.rs:715:1
     |
715  | pub struct Queue {
     | ^^^^^^^^^^^^^^^^
     = note: perhaps two different versions of crate `wgpu` are being used?
     = note: `TextureFormat` and `wgpu_types::TextureFormat` have similar names, but are actually distinct types
note: `TextureFormat` is defined in crate `wgpu_types`
    --> C:\Users\laure\.cargo\registry\src\index.crates.io-6f17d22bba15001f\wgpu-types-0.17.0\src\lib.rs:1940:1
     |
1940 | pub enum TextureFormat {
     | ^^^^^^^^^^^^^^^^^^^^^^
note: `wgpu_types::TextureFormat` is defined in crate `wgpu_types`
    --> C:\Users\laure\.cargo\registry\src\index.crates.io-6f17d22bba15001f\wgpu-types-0.16.1\src\lib.rs:1907:1
     |
1907 | pub enum TextureFormat {
     | ^^^^^^^^^^^^^^^^^^^^^^
     = note: perhaps two different versions of crate `wgpu_types` are being used?
note: associated function defined here
    --> C:\Users\laure\.cargo\registry\src\index.crates.io-6f17d22bba15001f\glyphon-0.3.0\src\text_atlas.rs:276:12
     |
276  |     pub fn new(device: &Device, queue: &Queue, format: TextureFormat) -> Self {
     |            ^^^

error[E0308]: arguments to this function are incorrect
    --> src/main.rs:110:9
     |
110  |         TextRenderer::new(&mut atlas, &device, MultisampleState::default(), None);
     |         ^^^^^^^^^^^^^^^^^             -------  --------------------------- expected `wgpu_types::MultisampleState`, found `MultisampleState`
     |                                       |
     |                                       expected `wgpu::Device`, found a different `wgpu::Device`
     |
     = note: `wgpu::Device` and `wgpu::Device` have similar names, but are actually distinct types
note: `wgpu::Device` is defined in crate `wgpu`
    --> C:\Users\laure\.cargo\registry\src\index.crates.io-6f17d22bba15001f\wgpu-0.17.0\src\lib.rs:160:1
     |
160  | pub struct Device {
     | ^^^^^^^^^^^^^^^^^
note: `wgpu::Device` is defined in crate `wgpu`
    --> C:\Users\laure\.cargo\registry\src\index.crates.io-6f17d22bba15001f\wgpu-0.16.3\src\lib.rs:117:1
     |
117  | pub struct Device {
     | ^^^^^^^^^^^^^^^^^
     = note: perhaps two different versions of crate `wgpu` are being used?
     = note: `MultisampleState` and `wgpu_types::MultisampleState` have similar names, but are actually distinct types
note: `MultisampleState` is defined in crate `wgpu_types`
    --> C:\Users\laure\.cargo\registry\src\index.crates.io-6f17d22bba15001f\wgpu-types-0.17.0\src\lib.rs:1792:1
     |
1792 | pub struct MultisampleState {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: `wgpu_types::MultisampleState` is defined in crate `wgpu_types`
    --> C:\Users\laure\.cargo\registry\src\index.crates.io-6f17d22bba15001f\wgpu-types-0.16.1\src\lib.rs:1760:1
     |
1760 | pub struct MultisampleState {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
     = note: perhaps two different versions of crate `wgpu_types` are being used?
note: associated function defined here
    --> C:\Users\laure\.cargo\registry\src\index.crates.io-6f17d22bba15001f\glyphon-0.3.0\src\text_render.rs:25:12
     |
25   |     pub fn new(
     |            ^^^

error[E0308]: arguments to this method are incorrect
   --> src/main.rs:313:18
    |
313 |                 .prepare(
    |                  ^^^^^^^
314 |                     &device,
    |                     ------- expected `wgpu::Device`, found a different `wgpu::Device`
315 |                     &queue,
    |                     ------ expected `wgpu::Queue`, found a different `wgpu::Queue`
    |
    = note: `wgpu::Device` and `wgpu::Device` have similar names, but are actually distinct types
note: `wgpu::Device` is defined in crate `wgpu`
   --> C:\Users\laure\.cargo\registry\src\index.crates.io-6f17d22bba15001f\wgpu-0.17.0\src\lib.rs:160:1
    |
160 | pub struct Device {
    | ^^^^^^^^^^^^^^^^^
note: `wgpu::Device` is defined in crate `wgpu`
   --> C:\Users\laure\.cargo\registry\src\index.crates.io-6f17d22bba15001f\wgpu-0.16.3\src\lib.rs:117:1
    |
117 | pub struct Device {
    | ^^^^^^^^^^^^^^^^^
    = note: perhaps two different versions of crate `wgpu` are being used?
    = note: `wgpu::Queue` and `wgpu::Queue` have similar names, but are actually distinct types
note: `wgpu::Queue` is defined in crate `wgpu`
   --> C:\Users\laure\.cargo\registry\src\index.crates.io-6f17d22bba15001f\wgpu-0.17.0\src\lib.rs:884:1
    |
884 | pub struct Queue {
    | ^^^^^^^^^^^^^^^^
note: `wgpu::Queue` is defined in crate `wgpu`
   --> C:\Users\laure\.cargo\registry\src\index.crates.io-6f17d22bba15001f\wgpu-0.16.3\src\lib.rs:715:1
    |
715 | pub struct Queue {
    | ^^^^^^^^^^^^^^^^
    = note: perhaps two different versions of crate `wgpu` are being used?
note: method defined here
   --> C:\Users\laure\.cargo\registry\src\index.crates.io-6f17d22bba15001f\glyphon-0.3.0\src\text_render.rs:356:12
    |
356 |     pub fn prepare<'a>(
    |            ^^^^^^^

error[E0308]: mismatched types
   --> src/main.rs:357:46
    |
357 |                 text_renderer.render(&atlas, &mut pass).unwrap();
    |                               ------         ^^^^^^^^^ expected `wgpu::RenderPass<'_>`, found a different `wgpu::RenderPass<'_>`
    |                               |
    |                               arguments to this method are incorrect
    |
    = note: `wgpu::RenderPass<'_>` and `wgpu::RenderPass<'_>` have similar names, but are actually distinct types
note: `wgpu::RenderPass<'_>` is defined in crate `wgpu`
   --> C:\Users\laure\.cargo\registry\src\index.crates.io-6f17d22bba15001f\wgpu-0.17.0\src\lib.rs:774:1
    |
774 | pub struct RenderPass<'a> {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^
note: `wgpu::RenderPass<'_>` is defined in crate `wgpu`
   --> C:\Users\laure\.cargo\registry\src\index.crates.io-6f17d22bba15001f\wgpu-0.16.3\src\lib.rs:619:1
    |
619 | pub struct RenderPass<'a> {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^
    = note: perhaps two different versions of crate `wgpu` are being used?
note: method defined here
   --> C:\Users\laure\.cargo\registry\src\index.crates.io-6f17d22bba15001f\glyphon-0.3.0\src\text_render.rs:379:12
    |
379 |     pub fn render<'pass>(
    |            ^^^^^^

For more information about this error, try `rustc --explain E0308`.
warning: `text-generation` (bin "text-generation") generated 1 warning
error: could not compile `text-generation` (bin "text-generation") due to 4 previous errors; 1 warning emitted